# Copyright (c) 2019 Jakob Meng, <jakobmeng@web.de>
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
#

#################### list the subdirectories ####################

add_subdirectory(are_same)
add_subdirectory(index_of)
add_subdirectory(is_braces_constructible)
add_subdirectory(is_core_applicable)
add_subdirectory(matlab_cxn)
add_subdirectory(operators)
